--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="/favicon.ico" />
     <title>new_project_2</title>
-    <script defer="defer" src="https://github.com/MohamedAmer29/Simple-Quizes_App/blob/gh-pages/js/chunk-vendors.c104b5db.js"></script>
-    <script defer="defer" src="https://github.com/MohamedAmer29/Simple-Quizes_App/blob/gh-pages/js/app.f9c239f6.js"></script>
-    <link href="https://github.com/MohamedAmer29/Simple-Quizes_App/blob/gh-pages/css/app.36bc48a9.css" rel="stylesheet" />
+    <script defer="defer" src="/js/chunk-vendors.c104b5db.js"></script>
+    <script defer="defer" src="/js/app.f9c239f6.js"></script>
+    <link href="/css/app.36bc48a9.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
